<resources>
    <string name="app_name">Chatify</string>
    <string name="app_name_greet">From Chatify team with love</string>
    <string name="slogan">Nhắn gửi yêu thương!</string>
    <string name="feature_chat">Nhắn tin dễ dàng</string>
    <string name="feature_chat_desc">Nhắn tin với bạn bè, người thân nhanh chóng, dễ dàng!</string>
    <string name="feature_audio_call">Trò chuyện thuận tiện</string>
    <string name="feature_audio_call_desc">Trò chuyện thuận tiện mọi lúc mọi nơi một cách ổn định nhất!</string>
    <string name="feature_video_call">Gọi video ổn định</string>
    <string name="feature_video_call_desc">Tán gẫu thật đã với chất lượng video ổn định mọi lúc, mọi nơi!</string>
    <string name="login">Đăng nhập</string>
    <string name="username">Số điện thoại đăng nhập</string>
    <string name="password">Mật khẩu</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="confirm_new_password">Xác nhận lại mật khẩu mới</string>
    <string name="old_password">Mật khẩu hiện tại</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="forgot_pwd_new_pwd">Lấy lại mật khẩu</string>
    <string name="forgot_pwd_new_pwd_desc">Nhập số điện thoại mà bạn đã dùng để đăng ký tài khoản để nhận mã xác thực</string>
    <string name="no_account">Chưa có tài khoản?</string>
    <string name="register_now">Đăng ký ngay!</string>
    <string name="register">Đăng ký</string>
    <string name="register_num">Số điện thoại đăng ký</string>
    <string name="show">Hiện</string>
    <string name="hide">Ẩn</string>
    <string name="confirm_password">Xác nhận lại mật khẩu</string>
    <string name="have_account">Đã có tài khoản?</string>
    <string name="login_now">Đăng nhập ngay!</string>
    <string name="display_name">Nhập tên bạn muốn hiển thị</string>
    <string name="skip">Bỏ qua</string>
    <string name="search_hint">Tìm kiếm</string>
    <string name="chat_msg_hint">Tin nhắn</string>
    <string name="user_active">Đang hoạt động</string>
    <string name="group_active">Nhấn để xem thông tin nhóm</string>
    <string name="logout">Đăng xuất</string>
    <string name="logout_confirm">Bạn có thực sự muốn đăng xuất không?!</string>
    <string name="send_me_otp">Gửi mã OTP đến tôi</string>
    <string name="reset_phone_confirm">Chúng tôi sẽ gửi mã OTP đến số điện thoại bạn đã dùng để đăng ký tài khoản để thực hiện việc đổi số điện thoại mới.</string>
    <string name="reset_pwd_confirm">Chúng tôi sẽ gửi mã OTP đến số điện thoại bạn đã dùng để đăng ký tài khoản để thực hiện việc đổi mật khẩu mới.</string>
    <string name="otp">Mã OTP</string>
    <string name="empty_otp_err">Bạn vui lòng nhập mã OTP!</string>
    <string name="wrong_otp_err">Mã OTP không chính xác!</string>
    <string name="wrong_pwd_err">Mậu khẩu không chính xác!</string>
    <string name="cancel">Huỷ</string>
    <string name="confirm">Xác nhận</string>
    <string name="user_optional">Tùy chỉnh</string>
    <string name="user_optional_desc">Thêm ảnh đại diện giúp mọi người nhận ra bạn dễ hơn!</string>
    <string name="confirm_otp">Xác nhận mã OTP</string>
    <string name="verify_your_otp">Vui lòng nhập mã OTP đã được gửi đến số điện thoại của bạn</string>
    <string name="confirm_otp_pls">Vui lòng nhập mã OTP của bạn!</string>
    <string name="confirm_skip">Thêm giới tính và ảnh đại diện giúp mọi người tìm ra và hiểu bạn dễ hơn. Bạn vẫn muốn bỏ qua?!</string>
    <string name="otp_not_receive">Không nhận được mã OTP?</string>
    <string name="otp_resend">Gửi lại mã</string>
    <string name="otp_change_phone_no">Mã xác thực sẽ được gửi đến số điện thoại mà bạn vừa nhập. Vui lòng xác nhận số điện thoại trên là đúng.</string>
    <string name="change">Thay đổi</string>
    <string name="edit_pf">Sửa hồ sơ</string>
    <string name="user_info">Thông tin cá nhân</string>
    <string name="gender">Giới tính</string>
    <string name="gender_m">Nam</string>
    <string name="gender_f">Nữ</string>
    <string name="save">Lưu</string>
    <string name="dob">Ngày sinh</string>
    <string name="phone_no">Số điện thoại</string>
    <string name="account">Tài khoản</string>
    <string name="secure">Bảo mật</string>
    <string name="verify_2_step">Xác thực 2 lớp</string>
    <string name="verify_2_step_desc">Chatify sẽ gửi mã OTP mỗi khi bạn đăng nhập</string>
    <string name="change_phone_no">Đổi số điện thoại</string>
    <string name="change_phone_no_for_account">Đổi số điện thoại mới cho tài khoản của bạn</string>
    <string name="change_phone_no_for_account_desc">Số điện thoại mới sẽ gắn với thông tin, dữ liệu &amp; nhật ký của tài khoản.</string>
    <string name="change_phone_no_for_account_desc_friend">Bạn bè sẽ tìm thấy bạn bằng số điện thoại mới.</string>
    <string name="start_change_phone_no">Bắt đầu đổi số điện thoại &gt;</string>
    <string name="get_started">Bắt đầu ngay thôi!</string>
    <string name="delete_account">Xoá tài khoản</string>
    <string name="press_again_to_exit">Nhấn lần nữa để thoát!</string>
    <string name="account_and_secure">Tài khoản và bảo mật</string>
    <string name="add_friend">Thêm bạn</string>
    <string name="not_a_friend">Kết bạn</string>
    <string name="is_a_friend">Đã là bạn</string>
    <string name="name_in_app">Tên Chatify: </string>
    <string name="sync_from_contact">Cập nhật từ danh bạ máy</string>
    <string name="find">Tìm</string>
    <string name="add_friend_by_phone_no">Thêm bạn bằng số điện thoại</string>
    <string name="option">Tùy chọn</string>
    <string name="tab_contact_friend">Bạn bè</string>
    <string name="tab_contact_group">Nhóm</string>
    <string name="new_group">Tạo nhóm mới</string>
    <string name="create_group">Tạo nhóm</string>
    <string name="add_new_group_member">Thêm bạn vào nhóm</string>
    <string name="create_new_group_member">Chọn bạn bè để tạo nhóm</string>
    <string name="add_new_group_done">Xong</string>
    <string name="friend_request">Lời mời kết bạn</string>
    <string name="friend_request_desc">Thu hồi hoặc từ chối lời mời kết bạn</string>
    <string name="friend_request_send">Đã gửi</string>
    <string name="friend_request_receive">Đã nhận</string>
    <string name="friend_request_accept">Chấp nhận</string>
    <string name="friend_request_delete">Xoá</string>
    <string name="friend_request_decline">Từ chối</string>
    <string name="friend_request_decline_desc">Từ chối lời mời kết bạn</string>
    <string name="friend_request_cancel">Thu hồi</string>
    <string name="friend_request_sent_success">Gửi lời mời kết bạn thành công!</string>
    <string name="friend_request_accept_success">Chúc mừng! Bạn vừa có thêm 1 người bạn mới! Giờ đây các bạn có thể trò chuyện với nhau bất cứ lúc nào!</string>
    <string name="friend_from_contact">Danh bạ máy</string>
    <string name="friend_from_contact_desc">Các liên hệ có dùng Chatify</string>
    <string name="typing">Đang nhập</string>
    <string name="sending">Đang gửi</string>
    <string name="confirm_update_profile">Cập nhật thông tin tài khoản</string>
    <string name="confirm_update_profile_desc">Bạn có chắc chắn muốn cập nhật lại các thông tin này chứ?!</string>
    <string name="pls_wait">Đang xử lý&#8230; Bạn đợi tý nhé ^^!</string>
    <string name="send">Gửi</string>
    <string name="pick_img">Chọn ảnh</string>
    <string name="change_friend_nick_name">Đổi tên gợi nhớ</string>
    <string name="sent_file">Ảnh, file đã gửi</string>
    <string name="unfriend">Huỷ kết bạn</string>
    <string name="delete_conversation">Xoá lịch sử cuộc trò chuyện</string>
    <string name="phone_contact">Danh bạ máy</string>
    <string name="phone_contact_desc">Thêm bạn từ danh bạ máy</string>
    <string name="note">Lưu ý:</string>
    <string name="continue_add">Tiếp tục</string>
    <string name="new_phone">Nhập số điện thoại mới</string>
    <string name="note_new_phone">+ Số điện thoại mới sẽ nhận được mã xác thực (OTP) qua tin nhắn từ hệ thống Chatify.</string>
    <string name="note_new_phone_warning">+ Số điện thoại mới phải là số chưa được dùng để đăng ký tài khoản Chatify trước đó.</string>
    <string name="all_friends">Tất cả</string>
    <string name="active_account">Kích hoạt tài khoản</string>
    <string name="no_share_otp">Vui lòng không chia sẻ mã xác nhận để tránh mất tài khoản</string>
    <string name="not_friends">Chưa là bạn</string>
    <string name="new_group_name">Đặt tên nhóm</string>
    <string name="new_group_search">Tìm theo tên hoặc số điện thoại</string>
    <string name="next">Tiếp theo</string>
    <string name="start_now">Bắt đầu ngay!</string>
    <string name="ob_feature_start">Còn nhiều điều bất ngờ phía trước! Bắt đầu ngay thôi!</string>
    <string name="ob_feature_welcome">Chào mừng bạn đến với ứng dụng chat Chatify!</string>
    <string name="ob_feature_welcome_desc">Cùng khám phá những tiện ích giúp bạn kết nối và trò chuyện cùng người thân, bạn bè ngay nào!</string>
    <string name="ob_feature_connect">Kết nối với mọi người</string>
    <string name="ob_feature_connect_desc">Kết nối, liên lạc với bạn bè thuận tiện mọi lúc, mọi nơi miễn là có internet!</string>
    <string name="ob_feature_sync">Trải nghiệm xuyên suốt</string>
    <string name="ob_feature_sync_desc">Kết nối và giải quyết công việc trên mọi thiết bị với dữ liệu luôn được đồng bộ!</string>
    <string name="user_birthday">Cảm ơn bạn đã đồng hành cùng Chatify trong suốt thời gian qua!</string>
    <string name="user_birthday_greeting">Chúc bạn có một tuổi mới thật bùng nổ! Hạnh phúc bên gia đình và những người yêu thương!</string>
    <string name="change_phone_no_limit">Bạn chỉ có thể đổi số điện thoại 1 lần mỗi tháng.</string>
    <string name="group_members">Xem thành viên</string>
    <string name="group_members_desc">Thành viên nhóm</string>
    <string name="add_group_members">Thêm thành viên</string>
    <string name="add_member_to_members">Thêm vào nhóm</string>
    <string name="group_lead_role">Trưởng nhóm</string>
    <string name="group_lead_role_change">Chuyển quyền trưởng nhóm</string>
    <string name="out_group">Rời nhóm</string>
    <string name="kick_from_group">Xoá khỏi nhóm</string>
    <string name="disband_group">Giải tán nhóm</string>
    <string name="disband_group_confirm">Bạn có chắc chắn muốn giải tán nhóm này hay không?!</string>
    <string name="disband_group_success">Bạn đã giải tán nhóm!</string>
    <string name="group_admin">Trưởng nhóm</string>
    <string name="member_quan">Thành viên</string>
    <string name="user">Bạn</string>
    <string name="add_member_to_group_success">Thêm thành viên vào nhóm thành công!</string>
    <string name="just_now">Vừa xong</string>
    <string name="confirm_out_group">Bạn có thực sự muốn rời khởi nhóm?!</string>
    <string name="confirm_out_group_admin_ask">Chọn trưởng nhóm mới trước khi rời nhóm?</string>
    <string name="confirm_out_group_admin">Bạn có thể chọn một trưởng nhóm mới trước khi rời nhóm. Nếu không, quyền trưởng nhóm sẽ được trao ngẫu nhiên cho một thành viên còn lại.</string>
    <string name="change_group_name">Đổi tên nhóm</string>
    <string name="change_group_name_success">Đổi tên nhóm</string>
    <string name="confirm_remove_member">Bạn có chắc muốn xoá thành viên này khỏi nhóm?</string>
    <string name="use_removed">Bạn đã bị nhóm trưởng xoá khỏi nhóm!</string>
    <string name="last_msg_kicked">Bạn đã bị xoá khỏi nhóm</string>
    <string name="group_disbanded">Nhóm đã bị giải tán!</string>
    <string name="last_msg_disbaned">Nhóm đã giải tán</string>
    <string name="group_status_disband">Nhóm đã giải tán, bạn không thể gửi tin nhắn vào nhóm được nữa.  <font fgcolor='#0978f5'>Xoá cuộc trò chuyện</font></string>
    <string name="pick_new_admin">Chọn trưởng nhóm mới</string>
    <string name="forward_message">Chuyển tiếp</string>
    <string name="forward_message_desc">Chuyển tiếp tin nhắn đến:</string>
</resources>