<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="4dp"
    app:cardCornerRadius="18dp"
    android:backgroundTint="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:textColor="@color/white"
            android:text="@string/confirm_otp"
            android:background="@drawable/bg_top_radius"
            android:textSize="24dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_otp_pls"
            android:gravity="center"
            android:textSize="18dp"
            android:paddingVertical="8dp"
            android:textColor="@color/black"/>

        <EditText
            android:layout_marginHorizontal="6dp"
            android:id="@+id/edt_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="OTP"
            android:inputType="number"
            android:layout_marginVertical="12dp"
            android:textSize="20dp"
            android:paddingVertical="10dp"
            android:paddingHorizontal="8dp"
            android:background="@drawable/edit_text_outline"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="6dp"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mBtn_cancel"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:textColor="@color/white"
                app:cornerRadius="8dp"
                android:backgroundTint="@color/secondaryColor"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/cancel"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mBtn_confirm"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:padding="10dp"
                app:cornerRadius="8dp"
                android:backgroundTint="@color/primary_color"
                android:layout_height="wrap_content"
                android:text="@string/confirm"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_otp_not_receive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="12dp"
            android:textColor="@color/primary_color"
            android:textStyle="bold"
            android:text="@string/otp_not_receive"/>
    </LinearLayout>


</androidx.cardview.widget.CardView>