<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/scroll_parent"
    android:scrollbarSize="0dp"
    tools:context=".fragments.conversation.AddNewGroupFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="false"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@drawable/border_bottom"
            android:paddingHorizontal="10dp">

            <TextView
                android:id="@+id/iBtn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/cancel"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_toolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/new_group"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/iBtn_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/add_new_group_done"
                android:visibility="gone"
                android:textColor="@color/primary_color"
                android:textSize="20sp"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/cimv_group_avatar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/bg_circle_cam" />

            <EditText
                android:id="@+id/edt_group_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="text"
                android:layout_marginEnd="8dp"
                android:background="@drawable/border_bottom"
                android:hint="@string/new_group_name"
                android:paddingHorizontal="8dp"
                android:textCursorDrawable="@drawable/edt_cursor" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:text="@string/add_new_group_member"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:drawablePadding="4dp"
            android:inputType="text"
            android:drawableLeft="@drawable/ic_search_gray"
            android:background="@drawable/edit_search_outline"
            android:hint="@string/new_group_search"
            android:padding="10dp"
            android:textCursorDrawable="@drawable/edt_cursor"
            android:textSize="16sp"
            tools:ignore="Autofill" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_friends"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:paddingTop="6dp"/>
    </LinearLayout>

</ScrollView>