<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/gray_f1"
    tools:context=".fragments.conversation.ConversationDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white">
        <RelativeLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/primary_color"
            android:paddingHorizontal="10dp">

            <ImageButton
                android:id="@+id/iBtn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_back_white"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_toolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="8dp"
                android:text="@string/option"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </RelativeLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imv_friend_pfp"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:src="@drawable/cat" />

        <TextView
            android:id="@+id/tv_friend_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:fontFamily="@font/be_vietnam"
            android:textStyle="bold" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:background="@color/gray_f1"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/tv_change_nick_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_edit_2_outline"
            android:drawableRight="@drawable/ic_navigate_next"
            android:fontFamily="@font/be_vietnam"
            android:background="@drawable/border_bottom"
            android:paddingHorizontal="6dp"
            android:textSize="16sp"
            android:drawablePadding="10dp"
            android:paddingVertical="10dp"
            android:text="@string/change_friend_nick_name"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_sent_file"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_images_outline"
            android:drawableRight="@drawable/ic_navigate_next"
            android:fontFamily="@font/be_vietnam"
            android:paddingHorizontal="6dp"
            android:background="@drawable/border_bottom"
            android:drawablePadding="10dp"
            android:paddingVertical="10dp"
            android:textSize="16sp"
            android:text="@string/sent_file"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_unfriend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_unfriend"
            android:fontFamily="@font/be_vietnam"
            android:paddingHorizontal="6dp"
            android:background="@drawable/border_bottom"
            android:drawablePadding="10dp"
            android:paddingVertical="10dp"
            android:textSize="16sp"
            android:text="@string/unfriend"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_addFriend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_user_add"
            android:fontFamily="@font/be_vietnam"
            android:paddingHorizontal="6dp"
            android:background="@drawable/border_bottom"
            android:drawablePadding="10dp"
            android:paddingVertical="10dp"
            android:textSize="16sp"
            android:visibility="gone"
            android:text="@string/add_friend"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_delete_conversation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_trash_alt"
            android:fontFamily="@font/be_vietnam"
            android:paddingHorizontal="6dp"
            android:drawablePadding="10dp"
            android:paddingVertical="10dp"
            android:textSize="16sp"
            android:text="@string/delete_conversation"
            android:textColor="@color/danger" />
    </LinearLayout>

</RelativeLayout>