<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="@color/white"
    app:cardCornerRadius="8dp"
    android:layout_marginHorizontal="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:paddingVertical="4dp"
            android:background="@drawable/border_bottom"/>

        <TextView
            android:id="@+id/tv_new_phone_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="30sp"
            android:paddingVertical="8dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/otp_change_phone_no"
            android:textAlignment="center"
            android:textSize="18sp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/gray"
            android:paddingVertical="4dp"
            android:paddingHorizontal="18dp"
            android:justificationMode="inter_word"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="10dp"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/tv_change"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textAllCaps="true"
                android:textColor="@color/primary_color"
                android:text="@string/change"/>

            <TextView
                android:id="@+id/tv_confirm"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textAllCaps="true"
                android:textColor="@color/primary_color"
                android:text="@string/confirm"/>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>